=====================================================================
	Change Log
	Genmod

	This and other information can be found online at
	http://www.sourceforge.net/projects/genmod

	# $Id: changelog.txt 32 2016-07-08 14:35:37Z Boudewijn $
=====================================================================

Version 2.0 beta 2
- Fixed SQL error when rebuilding caches
- Fixed wrong name record is updated if more than one exists
- Fixed wrong layout on fampage is hitcounter is hidden
- Fixed error in uploading gedcom file
- Fixed footer placement in uploadgedcom
- Added support for PHP 7
- Fixed first fact from clipboard cannot be copied
- Added some blocks load with Ajax to improve user experience
- Fixed concurrent AJAX calls
- Fixed clicking on source link in edit form makes ID disappear
- Fixed issue in gedrecord.php if pid doesn't exist
- Fixed issue with language settings load during install
- Fixed some CSS an DB errors in install
- Fixed error for first option in external search
- Fixed error when ID for fam/indipage is empty
- Fixed show/hide changes not working on fampage
- Fixed error in descendancy if person has no parents
- Fixed error in pinyin translation block
- Fixed media connections not showing in media browser
- Fixed error in external search (userGedcomAdmin)
- Added tooltip to genmod username of an individual
- Added display tooltips on custompage
- Fixed arrow swap up/down on paternals and familybook page
- Fixed wrong behaviour of some radio buttons in chart pages
- added support for Cyrillic transliteration
- fixed wrong placelinks in all place list
- fixed error in logfunction
- Fixed error in gmrpc is input variable does not exist
- Fixed log order wrong for imported records of emergency log
- Fixed login with https jumps back to http
- Fixed empty date in editing field returns current date
- Fixed variable error in add media
- Fixed Wrong focus in edit interface if + clicked
- Fixed not all optional facts are printed in person boxes